JS has been updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Lab: Pixel Art Maker</h1>
+    <h1>Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker" >
@@ -15,7 +15,7 @@
         <input type="number" id="inputHeight" name="height" min="1" value="5">
         Grid Width:
         <input type="number" id="inputWeight" name="width" min="1" value="5">
-        <input type="submit" onclick="return makeGrid()">
+        <input type="submit">
     </form>
 
     <h2>Pick A Color</h2>
@@ -27,6 +27,9 @@
 
 
     </table>
+    <footer>
+        <div></div>
+    </footer>
 
        <script src="designs.js"></script>
 
